# Mandelbrot-set-renderer

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
.cmake/api/v1/reply/: cache-v2-bc4976801de0aa65c5e4.json  cmakeFiles-v1-5a5fb6e23ee6d46823c1.json  codemodel-v2-93ed6ec0921a3aba6f89.json  index-2022-11-03T12-21-11-0705.json  target-Mandelbrot_set_renderer-Debug-fe4f9cfb6cb451ffddd1.json
lib/SDL2/docs/: README.md
lib/SDL2/test/: CMakeLists.txt
src/: main.cpp
